fix: Remove extra margin between breadcrumb navigation and map-container

--- a/css/custom.css
+++ b/css/custom.css
@@ -100,7 +100,7 @@ nav{
     height: 400px;
     position: relative;
     z-index: 1;
-    top: 150px;
+    top: 130px;
 }
 
 .restaurant-container,
